--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "red-archive-fe",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -27,6 +27,12 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "@ant-design/icons": "^5.3.4",
+    "ahooks": "^3.7.10",
+    "antd": "^5.15.3",
+    "axios": "^1.6.8",
+    "sass": "^1.72.0",
+    "react-router-dom": "^6.22.3"
   }
 }
